add indicator - year connection